--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <section class="section">
       <div class="section-header">
         <h3>About Me</h3>
-        <p>my self mahender kumar i am building my future.</p>
+        <p>Short intro about who you are and what you are building.</p>
       </div>
       <div class="about-grid">
         <div>
@@ -99,6 +99,36 @@
             <p>New Delhi, India</p>
           </div>
         </div>
+      </div>
+    </section>
+
+    <!-- MY EBOOK -->
+    <section class="section" id="my-ebook">
+      <div class="section-header">
+        <h3>📖 My Ebook – Meri Duniya</h3>
+        <p>
+          “Meri Duniya” is my first Hindi ebook, a collection of poems, thoughts
+          and funny chutkule about struggles, emotions and the search for
+          happiness in everyday life.
+        </p>
+      </div>
+
+      <div class="cards-grid">
+        <article class="card">
+          <h4>मेरी दुनिया (Meri Duniya)</h4>
+          <p>
+            In this book I have turned my own experiences, childhood memories and
+            inner feelings into simple shayari and short pieces that sometimes
+            make you think and sometimes make you smile.
+          </p>
+          <a
+            href="https://superprofile.bio/vp/69384e9fc9813a00137da662"
+            target="_blank"
+            class="btn primary"
+          >
+            Buy the Ebook
+          </a>
+        </article>
       </div>
     </section>
 
@@ -134,7 +164,7 @@
 
           <button type="submit" class="btn primary full">Send Message</button>
           <p class="form-note">
-            we will reply as soon as possible.
+            This form is powered by Formspree. You’ll get messages directly in your email.
           </p>
         </form>
       </div>
