--- a/blogs.html
+++ b/blogs.html
@@ -117,6 +117,7 @@
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 1.5rem;
       width: 100%;
+      justify-items: center;
     }
 
     .blog-card {
@@ -130,6 +131,8 @@
       height: 100%;
       box-shadow: var(--blog-shadow);
       cursor: pointer;
+      max-width: 320px;        
+       width: 100%;
     }
 
     .blog-card:hover {
