--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,6 @@
       </div>
 
       <div class="cards-grid">
-        <!-- Project 1 -->
         <article class="card">
           <h4>Tool for Traders</h4>
           <p>
@@ -61,7 +60,6 @@
           </div>
         </article>
 
-        <!-- Project 2 -->
         <article class="card">
           <h4>Free AI World – Free Tools (2025)</h4>
           <p>
@@ -79,7 +77,6 @@
           </div>
         </article>
 
-        <!-- Project 3 -->
         <article class="card">
           <h4>My Goal – Daily Goal Monitor</h4>
           <p>
@@ -92,6 +89,23 @@
               Live Demo
             </a>
             <a href="https://github.com/mahenderkumar-12/my-goal" target="_blank" class="btn small outline">
+              Source Code
+            </a>
+          </div>
+        </article>
+
+        <article class="card">
+          <h4>MK | Rental Person</h4>
+          <p>
+            A landing page and service platform for rental management, designed with a focus on 
+            user experience and clean service presentation.
+          </p>
+          <p class="meta">Tech: HTML, CSS, JavaScript</p>
+          <div class="card-actions">
+            <a href="https://arihant102.github.io/mk-rental/" target="_blank" class="btn small primary">
+              Live Demo
+            </a>
+            <a href="https://github.com/arihant102/mk-rental" target="_blank" class="btn small outline">
               Source Code
             </a>
           </div>
