--- a/projects.html
+++ b/projects.html
@@ -102,10 +102,10 @@
           </p>
           <p class="meta">Tech: HTML, CSS, JavaScript</p>
           <div class="card-actions">
-            <a href="https://arihant102.github.io/mk-rental/" target="_blank" class="btn small primary">
+            <a href="https://mahenderkumar-12.github.io/mkr-rental//" target="_blank" class="btn small primary">
               Live Demo
             </a>
-            <a href="https://github.com/arihant102/mk-rental" target="_blank" class="btn small outline">
+            <a href="https://github.com/mahenderkumar-12/mkr-rental" target="_blank" class="btn small outline">
               Source Code
             </a>
           </div>
